syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloud/dataplatform/api/connman/common.proto";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

package yandex.cloud.priv.connman.v1;

enum KafkaMechanism {
    KAFKA_MECHANISM_UNSPECIFIED = 0;
    KAFKA_MECHANISM_SHA256 = 1;
    KAFKA_MECHANISM_SHA512 = 2;
}

message KafkaSaslSecurity {
    string user = 1;
    Password password = 2;
    KafkaMechanism mechanism = 3;
}

message KafkaAuth {
    oneof security {
        KafkaSaslSecurity sasl = 1;
        google.protobuf.Empty disabled = 2;
    }
}
message KafkaCluster {
    repeated string hosts = 1;
    int64 port = 2;
    TLSParams tls_params = 3;
}
message KafkaConnection {
    oneof connection {
        KafkaCluster on_premise = 1;
        string managed_cluster_id = 2;
    }
    KafkaAuth auth = 3;
}
